tests/neg/transparent-inline-i15506-message.check
-- [E007] Type Mismatch Error: tests/neg/transparent-inline-i15506-message.scala:5:19 ----------------------------------
5 |val x: Some[Int] = bar // error
  |                   ^^^
  |                   Found:    Some[Int | Boolean]
  |                   Required: Some[Int]
  |
  |                   Note: `method bar` is transparent inline, but its precise type may not be available here.
  |                   This can happen when:
  |                   - It is used inside another inline body.
  |                   - Its result type depends on another inline expansion or on an inline parameter.
  |
  | longer explanation available when compiling with `-explain`
